# Warships2

./: .env.app  .env.app.example  .env.engine  .env.engine.example  .env.example  .gitignore  .importlinter  .jscpd.json  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.aiassistant/rules/: warships_rules.md
.github/workflows/: build_windows.yml  quality.yml
.run/: Warships.run.xml
docs/: README.md  architecture_audit.md  architecture_refactor_plan.md  build_windows_exe.md  design.md  design_v1.md  engine_diagnostics_plan.md  engine_diagnostics_playbook.md  engine_generalization_plan.md  engine_observability_tool_plan.md  engine_test_plan.md  import_boundaries.md  quality_ci_enablement_plan.md  rendering_mode_migration_plan.md  split_engine_app_plan.md  warships_test_plan.md
docs/architecture/: README.md  asset_management_policies.md  audio_policies.md  codebase_discipline_and_quality_policy.md  engine_api_contract_model_policy.md  engine_vision_and_strategy.md  input_policies.md  rendering_policies.md  system_overview.md  window_and_panel_policies.md
docs/diagnostics/: HISTORY.md  README.md
docs/history/: development_history.md
docs/operations/: README.md  runtime_configuration.md  windows_build.md
docs/plans/: README.md
docs/site/: README.md
engine/: __init__.py  runtime_profile.py
engine/ai/: __init__.py  agent.py  blackboard.py  utility.py
engine/api/: __init__.py  action_dispatch.py  ai.py  app_port.py  assets.py  commands.py  composition.py  context.py  debug.py  dialogs.py  events.py  flow.py  game_module.py  gameplay.py  hosted_runtime.py  input_events.py  input_snapshot.py  interaction_modes.py  logging.py  module_graph.py  render.py  render_snapshot.py  runtime_primitives.py  screens.py  ui_framework.py  ui_primitives.py  ui_projection.py  ui_style.py  window.py
engine/assets/: __init__.py  registry.py
engine/bootstrap/: __init__.py
engine/diagnostics/: __init__.py  adapters.py  config.py  crash.py  event.py  hub.py  json_codec.py  metrics_store.py  observability.py  profiling.py  replay.py  ring_buffer.py  schema.py
engine/domain/: __init__.py
engine/gameplay/: __init__.py  state_store.py  system.py  time.py  update_loop.py
engine/input/: __init__.py  input_controller.py
engine/platform/: __init__.py
engine/rendering/: __init__.py  scene.py  scene_primitives.py  (+5 more)
scripts/: build_exe.ps1  check.ps1  check.py  check_api_runtime_factories.py  check_barrel_exports.py  check_bootstrap_wiring_ownership.py  check_boundary_dto_purity.py  check_docs.py  check_domain_semantic_leakage.py  check_duplicate_cluster.py  check_engine_file_limits.py  check_env_read_placement.py  check_exception_observability.py  check_feature_flag_registry.py  check_import_cycles.py  check_public_api_surface.py  check_state_mutation_ownership.py  diagnostics_benchmark.py  policy_static_checks.py
tests/: __init__.py  test_ai_strategy.py  test_board.py  test_controller.py  test_presets.py  test_rules.py  test_ui_framework_interactions.py  test_ui_framework_key_routing.py  test_ui_framework_modal_runtime.py  test_ui_framework_widgets.py
tools/: __init__.py  engine_observability.py  ui_diag_replay.py  ui_diag_viewer.py  window_backend_probe.py
warships/: __init__.py  main.py
(+415 files in other folders)
