[project]
name = "warships2"
version = "0.1.0"
description = "Classic Battleship (Warships) built with Python and pygfx."
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy>=2.0",
    "pygfx>=0.7",
    "wgpu>=0.20",
    "rendercanvas>=2.4",
    "glfw>=2.9",
]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyinstaller>=6.19",
]

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["F", "I", "E", "B", "UP"]
ignore = ["E501", "UP042", "UP047"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.14"
files = ["engine", "warships"]
exclude = "(^build/|^dist/|^tests/)"
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
