[project]
name = "warships2"
version = "0.1.0"
description = "Classic Battleship (Warships) built with Python and wgpu."
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy>=2.0",
    "wgpu>=0.20",
    "rendercanvas>=2.4",
    "glfw>=2.9",
]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyinstaller>=6.19",
]

[tool.mypy]
python_version = "3.14"
files = ["engine", "warships"]
exclude = "(^build/|^dist/|^tests/)"
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
strict_equality = true
no_implicit_reexport = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "wgpu.*",
    "rendercanvas.*",
    "freetype.*",
]
ignore_missing_imports = true
